<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoboconActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background2"
        android:orientation="vertical"
        android:scrollbars="vertical"
        tools:context=".AcmActivity">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_32x"
            android:layout_marginTop="@dimen/dimen_16x"
            android:layout_marginRight="@dimen/dimen_32x"
            android:gravity="center"
            android:text="PICT ROBOCON"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="175dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingLeft="@dimen/dimen_64x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_64x"
            android:paddingBottom="@dimen/dimen_16x"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/robologo" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16x"
            android:layout_marginTop="@dimen/dimen_32x"
            android:layout_marginRight="@dimen/dimen_16x"
            android:layout_marginBottom="@dimen/dimen_16x"
            android:background="@drawable/textbox"
            android:gravity="left"
            android:paddingLeft="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_16x"
            android:text="@string/roboconmain"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:typeface="serif" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="175dp"
            android:layout_weight="1"
            android:paddingLeft="@dimen/dimen_64x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_64x"
            android:paddingBottom="@dimen/dimen_16x"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/robo" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16x"
            android:layout_marginTop="@dimen/dimen_32x"
            android:layout_marginRight="@dimen/dimen_16x"
            android:background="@drawable/textbox"
            android:gravity="left"
            android:paddingLeft="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_16x"
            android:text="@string/robotech"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:typeface="serif"
            android:verticalScrollbarPosition="right" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16x"
            android:layout_marginTop="@dimen/dimen_32x"
            android:layout_marginRight="@dimen/dimen_16x"
            android:layout_marginBottom="@dimen/dimen_16x"
            android:background="@drawable/textbox"
            android:gravity="left"
            android:paddingLeft="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_16x"
            android:text="@string/robodates"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:typeface="serif" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/roboconextraButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_64x"
            android:layout_marginTop="@dimen/dimen_16x"
            android:layout_marginRight="@dimen/dimen_64x"
            android:layout_marginBottom="@dimen/dimen_16x"
            android:background="@drawable/temp"
            android:gravity="center"
            android:text="Tap to know more"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
