<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical"
    tools:context=".AcmExtraActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_32x"
            android:layout_marginTop="@dimen/dimen_16x"
            android:layout_marginRight="@dimen/dimen_32x"
            android:gravity="center"
            android:text="PASC Achievements"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_64x"
            android:layout_marginTop="@dimen/dimen_32x"
            android:layout_marginRight="@dimen/dimen_64x"
            android:background="@drawable/textbox"
            android:gravity="center"
            android:paddingLeft="@dimen/dimen_16x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_16x"
            android:paddingBottom="@dimen/dimen_16x"
            android:text="350 students enrolled"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_64x"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginRight="@dimen/dimen_64x"
            android:background="@drawable/textbox"
            android:gravity="center"
            android:paddingLeft="@dimen/dimen_16x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_16x"
            android:paddingBottom="@dimen/dimen_16x"
            android:text="52 Projects"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_64x"
            android:layout_marginTop="@dimen/dimen_16x"
            android:layout_marginRight="@dimen/dimen_64x"
            android:background="@drawable/textbox"
            android:gravity="center"
            android:paddingLeft="@dimen/dimen_16x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_16x"
            android:paddingBottom="@dimen/dimen_16x"
            android:text="29 Research Papers"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_32x"
            android:layout_marginTop="@dimen/dimen_32x"
            android:layout_marginRight="@dimen/dimen_32x"
            android:gravity="center"
            android:text="Featured News"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16x"
            android:layout_marginTop="@dimen/dimen_16x"
            android:layout_marginRight="@dimen/dimen_16x"
            android:background="@drawable/textbox"
            android:paddingLeft="@dimen/dimen_16x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_16x"
            android:paddingBottom="@dimen/dimen_16x"
            android:text="@string/award"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16x"
            android:layout_marginTop="@dimen/dimen_16x"
            android:layout_marginRight="@dimen/dimen_16x"
            android:background="@drawable/textbox"
            android:paddingLeft="@dimen/dimen_16x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_16x"
            android:paddingBottom="@dimen/dimen_16x"
            android:text="@string/pulzion"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/acmextraButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_64x"
            android:layout_marginTop="@dimen/dimen_32x"
            android:layout_marginRight="@dimen/dimen_64x"
            android:layout_marginBottom="@dimen/dimen_16x"
            android:background="@drawable/temp"
            android:gravity="center"
            android:text="View Notice"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_32x"
            android:layout_marginTop="@dimen/dimen_16x"
            android:layout_marginRight="@dimen/dimen_32x"
            android:gravity="center"
            android:text="Contact Us"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16x"
            android:layout_marginTop="@dimen/dimen_16x"
            android:layout_marginRight="@dimen/dimen_16x"
            android:autoLink="phone"
            android:background="@drawable/textbox"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="@dimen/dimen_8x"
            android:linksClickable="true"
            android:paddingLeft="@dimen/dimen_16x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_16x"
            android:paddingBottom="@dimen/dimen_16x"
            android:text="@string/acm_contact"
            android:textColor="@color/white"
            android:textColorLink="@color/textboxtext"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16x"
            android:layout_marginTop="@dimen/dimen_16x"
            android:layout_marginRight="@dimen/dimen_16x"
            android:layout_marginBottom="@dimen/dimen_8x"
            android:autoLink="web"
            android:background="@drawable/textbox"
            android:drawableLeft="@drawable/linkedin"
            android:drawablePadding="@dimen/dimen_8x"
            android:linksClickable="true"
            android:paddingLeft="@dimen/dimen_16x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_16x"
            android:paddingBottom="@dimen/dimen_16x"
            android:text="@string/acm_link"
            android:textColor="@color/white"
            android:textColorLink="@color/textboxtext"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>